test/files/neg/report-deprecated-error.check
report-deprecated-error.scala:26: error: method <<= is removed; use := syntax instead (foo-lib 1.0)
  <<=()
  ^
report-deprecated-error.scala:28: warning: should DSL is incubating, and future compatibility is not guaranteed (foo-lib 1.0)
  "bar" should {
  ^
1 warning
1 error
